# tonic-bench

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
go/: hellobench.pb.go  server.go
proto/: hellobench.proto
