[package]
name = "tonic-benchmark"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1"
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded"] }
structopt = "0.3"
prost = "0.6"
hyper = "0.13"

[build-dependencies]
tonic-build = "0.1.0"

[profile.release]
debug = true